# x-clipboard-manager

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ClipboardManager.pro  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Info.plist  PROJECT_STRUCTURE.md  PkgInfo
.github/workflows/: ci.yml
Formula/: xclipy.rb
docs/: APP_STORE_DEPLOYMENT.md  CI_CD_SETUP.md  HOMEBREW_DEPLOYMENT.md
include/: ClipboardManager.h  GlobalHotkey.h  HistoryWindow.h  PreferencesWindow.h
resources/: resources.qrc
scripts/: build.sh  deploy.sh  dev.sh  package.sh  test-ci.sh  test_features.sh  test_hotkey.sh
src/: ClipboardManager.cpp  GlobalHotkey.cpp  HistoryWindow.cpp  PreferencesWindow.cpp  main.cpp
